--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -4,7 +4,6 @@ ul {
     padding:0;
     overflow: hidden;
     background-color:#333;
-    position: fixed;
     top:0;
     left:0;
     width:100%;
@@ -13,6 +12,7 @@ ul {
 li {
     float: left;
     border-right: 1px solid #bbb;
+    color: white;
 }
 
 li:last-child {
